# memu-server

./: .env.example  .env.guardian.example  .gitignore  DELIVERY.md  GUARDIAN_FREE.md  LICENSE  NO_CONFIG_NEEDED.md  OPENSOURCE.md  QUICKSTART.md  QUICKSTART_GUARDIAN.md  README.md  START_HERE.md  demo_codegraph.py  install-guardian-opencode.sh  install-guardian.sh  memu-guardian-opencode.sh  memu-guardian-simple.sh  memu-guardian.py  pyproject.toml  test-guardian-setup.sh  verify.py
config/: guardian-system-prompt.md  opencode-config.json
docs/: CODEGRAPH.md  GUARDIAN_FILES.md
hooks/: claude-stop.sh  codex-session-start.sh  codex-stop.sh  sync-codebuddy-memory.sh
src/memu_server/: __init__.py  config.py  main.py  service.py
src/memu_server/tools/: __init__.py  codegraph.py  context.py  list_mem.py  memorize.py  retrieve.py
