[project]
name = "memu-server"
version = "0.1.0"
description = "Unified AI memory MCP server powered by memu"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "memu-py>=0.3.0",
    "aiosqlite>=0.20",
    "httpx[socks]>=0.27",
]

[project.scripts]
memu-server = "memu_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memu_server"]

[tool.uv.sources]
# Uncomment to use local memu during development:
# memu-py = { path = "../memu", editable = true }
